--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.2.0",
     "pinia": "^3.0.1",
+    "turndown": "^7.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
