--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@kangc/v-md-editor": "^2.3.18",
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
@@ -18,7 +19,9 @@
     "icons-vue": "^1.0.9",
     "markdown-it": "^14.1.0",
     "markdown-it-highlightjs": "^4.2.0",
+    "markdown-it-prism": "^3.0.0",
     "pinia": "^3.0.1",
+    "prismjs": "^1.30.0",
     "turndown": "^7.2.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
